--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,9 @@ header{
     border-bottom: 5px solid #b28756;
     color: #ccc;
 }
+.menu-openner{
+    display: none;
+}
 .button{
     display: inline-block;
     background-color: #b28756;
@@ -921,4 +924,317 @@ CSS de área específica
     background-color: #b28756;
     color: #fff;
     border-radius: 25px;
+}
+
+
+
+@media (mxn-width:450px){
+    .logo{
+        margin-left: 30px;
+    }
+    .menu-openner{
+        width: 45px;
+        margin-right: 30px;
+        display: block;
+    }
+    nav {
+        display: none;
+        position: absolute;
+        z-index: 93;
+        background-color: rgba(0, 0, 0, 0.9);
+        width: 70vw;
+        height: calc(100vh - 100px);
+        top: 100px;
+        right: 0;
+    }
+    .menu ul {
+        flex-direction: column;
+    }
+    .menu li a{
+        font-weight: bold;
+        height: 80px;
+        font-size: 27px;
+        margin-left: 50px;
+        border: 0;
+    }
+    .menu li.active a {
+        border: 0;
+        color: #b28756;
+    }
+    .section-aboutus {
+        flex-direction: column;
+    }
+    .section-aboutus--left {
+        margin-left: 30px;
+        margin-right: 30px;
+        margin-bottom: 30px;
+    }
+    .section-aboutus--right{
+        width: auto;
+    }
+    .section-services {
+        flex-wrap: wrap;
+    }
+    .section-service {
+        min-width: 50%;
+        margin-bottom: 30px;
+    }
+    .section-service:first-child{
+        border-left: 0;
+    }
+    .section-team{
+        max-width: 580px;
+    }
+    .section-marca {
+        flex-wrap: wrap;
+    }
+    .section-marca img{
+        min-width: 30vw;
+        margin-bottom: 30px;
+    }
+    .default.light.marcas{
+        padding-bottom: 20px;
+    }
+    .default.light.prices .section-prices--area{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .default.light.prices .section-price{
+        margin-bottom: 20px;
+    }
+    .section-premium{
+        flex-direction: column;
+    }
+    .section-premium--left{
+        margin-bottom: 30px;
+    }
+    .section-facts-area .section-body{
+        flex-wrap: wrap;
+    }
+    .section-body .section-fact{
+        margin-bottom: 30px;
+    }
+    .default.dark.facts{
+        padding-bottom: 20px;
+    }
+    .default.light.form{
+        height: auto;
+    }
+    .section-footer-area{
+        flex-direction: column;
+    }
+    .section-footer{
+        margin-bottom: 20px;
+        width: 80vw;
+        align-items: center;
+    }
+    .section-map {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+    .section-map--area{
+        width: auto;
+    }
+    .section-map--info{
+        width: auto;
+    }
+    .section-map--info-item{
+        margin-bottom: 20px;
+    }
+    .section-map--info-item:last-child{
+        margin-bottom: 0;
+    }
+}
+
+@media (max-width:450px){
+    .logo{
+        margin-left: 30px;
+    }
+    .menu-openner{
+        width: 45px;
+        margin-right: 30px;
+        display: block;
+    }
+    nav {
+        display: none;
+        position: absolute;
+        z-index: 93;
+        background-color: rgba(0, 0, 0, 0.9);
+        width: 80vw;
+        height: calc(100vh - 100px);
+        top: 100px;
+        right: 0;
+    }
+    .menu ul {
+        flex-direction: column;
+    }
+    .menu li a{
+        font-weight: bold;
+        height: 60px;
+        font-size: 20px;
+        margin-left: 30px;
+        border: 0;
+    }
+    .menu li.active a {
+        border: 0;
+        color: #b28756;
+    }
+    .banner h1{
+        font-size: 30px;
+    }
+    .banner h2{
+        font-size: 17px;
+    }
+
+    .section-aboutus {
+        flex-direction: column;
+        width: 100vw;
+    }
+    .section-aboutus--left {
+        margin-left: 30px;
+        margin-right: 30px;
+        margin-bottom: 30px;
+    }
+    .section-aboutus--right{
+        width: auto;
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+    .section-aboutus--right img{
+        width: 100%;
+    }
+
+    .section-services {
+        flex-wrap: wrap;
+    }
+    .section-service {
+        min-width: 100%;
+        margin-bottom: 30px;
+    }
+    .section-service:first-child{
+        border-left: 0;
+    }
+    
+    .sections-projects--filters{
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+    .sections-projects--filters ul{
+        flex-wrap: wrap
+    }
+    .sections-projects--filters li{
+        font-size: 12px;
+    }
+    .section-projects--photo{
+        width: 320px;
+    }
+    .section-projecs--photoarea{
+        width: 300px;
+        height: 190;
+    }
+    .section-team{
+        max-width: 280px;
+    }
+    .section-marca {
+        flex-wrap: wrap;
+    }
+    .section-marca img{
+        min-width: 30vw;
+        margin-bottom: 30px;
+    }
+    .default.light.marcas{
+        padding-bottom: 20px;
+    }
+    .default.light.prices .section-prices--area{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .default.light.prices .section-price{
+        margin-bottom: 20px;
+    }
+    .section-premium{
+        flex-direction: column;
+        width: 100vw;
+        margin-bottom: 0;
+        padding-bottom: 0px;
+    }
+    .section-premium--right{
+        width: 360px;
+    }
+    .section-premium--left{
+        margin-bottom: 30px;
+        padding-left: 40px;
+        width: 360px;
+        justify-content: center;
+    }
+    .section-premium--left img{
+        width: 80%;
+        height: auto;
+    }
+    .default.light.social{
+        height: auto;
+    }
+    .section-social-area, .section-social-item{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .section-social-area, .section-social-item:first-child{
+        width: 100%;
+        margin-bottom: 15px;
+    }
+    .section-social-area, .section-social-item a{
+        margin-bottom: 15px;
+    }
+    .section-facts-area .section-body{
+        flex-wrap: wrap;
+    }
+    .section-body .section-fact{
+        margin-bottom: 30px;
+    }
+    .default.dark.facts{
+        padding-bottom: 20px;
+    }
+    .default.light.form{
+        height: auto;
+    }
+    .default.light.form .id{
+        flex-direction: column;
+    }
+    .default.light.form .id,
+    .default.light.form .id .name,
+    .default.light.form .id .name input,
+    .default.light.form .id .email input,
+    .default.light.form .id .email,
+    .default.light.form #subject,
+    .default.light.form #message{
+        width: 300px;
+    }
+    .default.light.form .message{
+        margin-top: 0;
+    }
+
+    .section-footer-area{
+        flex-direction: column;
+    }
+    .section-footer{
+        margin-bottom: 20px;
+        width: 80vw;
+        align-items: center;
+    }
+    .section-map {
+        padding: 0;
+        padding-bottom: 250px;
+    }
+    .section-map--area{
+        width: auto;
+    }
+    .section-map--info{
+        width: auto;
+    }
+    .section-map--info-item{
+        margin-bottom: 20px;
+    }
+    .section-map--info-item:last-child{
+        margin-bottom: 0;
+    }
 }
